# artgallery-wallpaper

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
scripts/: compress_and_analyze_output.py  cuda_memory_fix.py  debug_frame.py  detailed_analysis.py  find_error_line.py  test_pipeline_params.py  visualize_ai_inputs.py
src/artgallery-wallpaper/: background_removal.py  frame.py  framegen_local.py  main.py
